Fix the issue that was causing the quote-container to overflow it's parent

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+
+}
 body {
     margin: 0;
     padding: 0;
@@ -41,6 +45,7 @@ nav {
     display: flex;
 }
 
+
 .main-text {
     font-size: 48px;
     font-weight: 800;
@@ -58,6 +63,7 @@ nav {
     display: flex;
     flex-direction: row;
 }
+
 .quote-container {
     outline: 1px solid red;
     background-color: #e5e7eb;
@@ -75,6 +81,7 @@ nav {
     font-size: 36px;
     font-style: italic;
     font-weight: 300;
+    width: 100%;
 }
 
 .author {
